--- a/index.html
+++ b/index.html
@@ -88,9 +88,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 id="product-title" class="modal-title" id="exampleModalLabel">
-              Modal title
-            </h5>
+            <h5 id="product-title" class="modal-title" id="exampleModalLabel"> Modal title</h5>
             <button
               type="button"
               class="btn-close"
